--- a/_posts/2021-12-11-markdown.markdown
+++ b/_posts/2021-12-11-markdown.markdown
@@ -10,4 +10,46 @@ comments: true
 ## Markdown 이란?
 마크다운(markdown)은 일반 텍스트 기반의 경량 마크업 언어다.  
   
-일반 텍스트로 서식이 있는 문서를 작성하는 데 사용되며, 일반 마크업 언어에 비해 문법이 쉽고 간단한 것이 특징이다.
+일반 텍스트로 서식이 있는 문서를 작성하는 데 사용되며, 일반 마크업 언어에 비해 문법이 쉽고 간단한 것이 특징이다.  
+
+
+## Mardown 문법
+1. 제목- title  
+\#을 1~6번 붙여서 표현 가능  
+# 제목 -H1
+## 제목 -H2
+### 제목 -H3
+#### 제목 -H4
+##### 제목 -H5
+###### 제목 -H6
+
+2. 강조 Emphasis   
+본문에 특정 문자에 서식(볼드, 이텔릭, 밑줄, 취소선)을 적용해 강조 가능  
+  
+
+*single asterisks 이텔릭체*  - \* + \*
+
+_single underscores 이텔릭체_  - \_ + \_  
+
+**double asterisks 볼드체**  - \** + \**
+
+__double underscores 볼드체__ - \__ + \__
+
+***triple asterisks 볼드+이텔릭체*** - \*** + \***
+
+___tripple underscores 볼드+이텔릭체___ + \___ + \___
+
+~~cancelline 취소선~~ - \~~ + \~~
+
+**~~bold cancelline 볼드+취소선~~** - \**~~ + \~~**
+
+3. 수평선
+-,*,_를 3번 연속해서 추가
+---
+***
+
+4. 링크  
+![title][link]로 추가 가능
+
+5. 이미지  
+![대체텍스트](이미지 URL or Path)
